# video-to-score

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/skills/test-samples/: SKILL.md
.github/workflows/: ci.yml
scripts/: test_samples.py
src/video_to_score/: __init__.py  assemble.py  cli.py  crop.py  debug.py  dedup.py  extract.py  filter.py  segment.py  select.py  types.py
tests/: conftest.py  test_extract_cli.py  test_segment.py  test_stages.py
