[project]
name = "video-to-score"
version = "0.1.0"
description = "Turn an MP4 video of page-flip sheet music into a clean, printable PDF score."
readme = "README.md"
authors = [
    { name = "cadamsmith", email = "cadamsmith.dev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "imagehash>=4.3.2",
    "img2pdf>=0.6.3",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "scipy>=1.17.1",
]

[project.scripts]
video-to-score = "video_to_score.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
